<resources>
    <string name="app_name">People of Star Wars</string>
    <string name="test_text_title_item">Luke Skywalker</string>
    <string name="test_text_subtitle_item">Human from Tatooine</string>
    <string name="main_activity_header">General Information</string>
    <string name="main_activity_eye">Eye Color</string>
    <string name="main_activity_hair">Hair Color</string>
    <string name="main_activity_skin">Skin Color</string>
    <string name="main_activity_birth">Birth Year</string>
    <string name="main_activity_vehicles">Vehicles</string>
    <string name="title_activity_favorite">Favorite</string>

</resources>